test/tests/compiler/11_long_integers/valid/long_expressions/simple.plx
#  A simple arithmetic test case 

pub fn main(none) i32 {
    l: i64 = 9223372036854775807l
    return (l - 2l == 9223372036854775805l)
}
