test/tests/compiler/11_long_integers/invalid_types/conflicting_global_types.plx
pub foo: i32 = 3

#  It's illegal to declare the same variable
#  * with different types
#  
pub foo: i64;

pub fn main(none) i32 {
    return foo
}
